--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javaanse Kalender (Tijdzone Gecorrigeerd)</title>
+    <title>Javaanse Kalender</title>
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
@@ -652,4 +652,5 @@
     </script>
 </body>
 </html>
+
 
