--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     </style>
 </head>
 <body>
-    <h1>Javaanse Kalender (Tijdzone Gecorrigeerd)</h1>
+    <h1>Javaanse Kalender</h1>
     <div class="container">
         <div class="navigatie">
             <button onclick="vorigeMaand()">←</button>
@@ -649,6 +649,7 @@
     </script>
 </body>
 </html>
+
 
 
 
