--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javaanse Kalender (Tijdzone Gecorrigeerd)</title>
+    <title>Javaanse Kalender</title>
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
@@ -190,7 +190,7 @@
     </style>
 </head>
 <body>
-    <h1>Javaanse Kalender (Tijdzone Gecorrigeerd)</h1>
+    <h1>Javaanse Kalender</h1>
     <div class="container">
         <div class="navigatie">
             <button onclick="vorigeMaand()">←</button>
@@ -652,3 +652,4 @@
     </script>
 </body>
 </html>
+
